# rightmove_scraper

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  rightmove_tracker.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-runs.yml  scrape.yml
supabase/migrations/: 001_create_property_state.sql  002_create_price_history_table.sql
tests/: test_rightmove_tracker.py
