[project]
name = "rightmove-tracker"
version = "0.1.0"
description = "Monitor Rightmove for new properties and price changes"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "single"
